FELIX-6719 : Improve request info output